--- a/Projects/Module 1/moms-shopping-list-start/style.css
+++ b/Projects/Module 1/moms-shopping-list-start/style.css
@@ -28,9 +28,14 @@
     top: 200px;
 }
 
-.list-of-items {
+#list-of-items {
     position: absolute;
     left: 650px;
     top: 200px;
 }
 
+.delete {
+    position: absolute;
+    left: 800px;
+    top: 225px;
+}
