--- a/Projects/module-2/css-zen-garden/index.css
+++ b/Projects/module-2/css-zen-garden/index.css
@@ -1,72 +1,238 @@
 
 
+body {
+    margin: 0;
+}
+
+
 .box-holder {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5,1fr);
-    height: 100vh;
-    background-color: white;
+    grid-template-rows: repeat(24,1fr);
+    height: 4100px;
+    background-image: url(http://www.csszengarden.com/214/huntington.jpg);
 }
+
 
 .box-1 {
-    background-color: blue;
     grid-column: 1/3;
-    grid-row: 1/2;
+    grid-row: 1/3;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
-
+.box-1 h1 {
+    color: white;
+    font-size: 100px;
+    font-family: serif;
+    font-weight: 100;
+    
+}
 .box-2 {
-    background-color: blue;
     grid-column: 3/4;
-    grid-row: 1/2;
+    grid-row: 1/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 } 
 
+.viewbutton {
+    height: 100px;
+    width: 200px;
+    margin: 10px;
+    background-color: white;
+    font-family: 'Julius Sans One';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.5;
+    transition: opacity 0.5s;
+}
+.viewbutton:hover {
+    opacity: 0.7;
+}
 .box-3 {
-    background-color: blue;
+    background-color: white;
     grid-column: 1/3;
-    grid-row: 2/3;
+    grid-row: 3/10;
+}
+.box-3 > p{
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 30px;
+
+}
+.box-3 > h1 {
+    margin-left: 30px;
+    font-weight: 200;
 }
 
 .box-4 {
-    background-color: blue;
+    background-color: #e4ece7;
     grid-column: 3/4;
-    grid-row: 2/3;
+    grid-row: 3/10;
+    
 }
-
+.box-4 li {
+    list-style-type: none;
+    font-size: 30px;
+    margin: 100px 0; 
+    transition: color 0.5s;
+    opacity: 1;
+}
+.box-4 li:hover {
+    color: white;
+}
 .box-5 {
-    background-color: blue;
+    background-color: #bdd6c7;
     grid-column: 1/3;
-    grid-row: 3/4;
+    grid-row: 10/14;
+    opacity:0.8;
 
 }
 
+.box-5 > h1 {
+    font-size: 30px;
+    margin-left: 20px;
+    font-weight: 200;
+}
+
+.box-5 > p {
+    font-size: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
 .box-6 {
-    background-color: blue;
+    background-color: #bdd6c7;
     grid-column: 3/4;
-    grid-row: 3/4;
+    grid-row: 10/14;
+    opacity: 0.8;
 }
-
+.box-6 li {
+    list-style-type: none;
+    font-size: 30px;
+    margin: 90px 0;
+    opacity: 1;
+    transition: color 0.5s;
+}
+.box-6 li:hover {
+    color: white;
+}
 .box-7 {
-    background-color: blue;
+    background-color: white;
     grid-column: 1/3;
-    grid-row: 4/5;
+    grid-row: 14/21;
+}
+.box-7 > h1 {
+    font-size: 30px;
+    margin-left: 20px;
+    font-weight: 200;
+}
+.box-7 > p {
+    font-size: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+
 }
 
 .box-8 {
-    background-color: blue;
+    background-color: #e4ece7;
     grid-column: 3/4;
-    grid-row: 4/5;
+    grid-row: 14/21;
 }
 
 .box-9 {
-    background-color: blue;
-    grid-column: 1/3;
-    grid-row: 5/6;
+    grid-column: 1/4;
+    grid-row: 21/23;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box-9 h1 {
+    color: white;
 }
 
 .box-10 {
-    background-color: blue;
-    grid-column: 3/4;
-    grid-row: 5/6;
+    background-color: #134347;
+    grid-column: 1/4;
+    grid-row: 23/25;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.fbpic {
+    width: 100px;
+    height: 100px;
+    margin: 50px;
 }
 
-@media screen and width
+@media only screen and (max-width: 1500px) {
+    .box-holder {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(11,1fr);
+        height: 4150px;
+        background-image: url(http://www.csszengarden.com/214/huntington.jpg);
+    }
+    .box-1 {
+        grid-column: 1/3;
+        grid-row: 1/2;
+        
+    }
+    .viewbutton {
+        width: 100%;
+    }
+    .box-2 {
+        grid-column: 1/3;
+        grid-row: 2/3;
+    } 
+    
+    .box-3 {
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+    
+    .box-4 {
+        grid-column: 1/3;
+        grid-row: 8/9;
+
+    }
+    .box-4 li {
+        margin: auto;
+    }
+    
+    .box-5 {
+        grid-column: 1/3;
+        grid-row: 4/5;
+    
+    }
+    
+    .box-6 {
+        grid-column: 1/3;
+        grid-row: 9/12;
+    }
+    .box-6 li{
+        margin: auto;
+    }
+    .box-7 {
+        grid-column: 1/3;
+        grid-row: 5/6;
+    }
+    .box-7 p {
+        font-size:20px;
+    }
+    
+    
+    .box-9 {
+        grid-column: 1/3;
+        grid-row: 6/7;
+    }
+    .box-9 h1{
+        font-size: 30px;
+    }
+    .box-10 {
+        grid-column: 1/3;
+        grid-row: 7/8;
+    }
+}
